# minimal_vst_pan

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: editor.rs  lib.rs  main.rs
